--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     </div>
     <div ng-view></div>
     <h1>Hello {{ name }}</h1>
-    <input type="text" placeholder="enter name" ng-model="name">  
+    <input type="text" placeholder="enter name" ng-model="name"> 
+    <button class="btn" ng-click="updateName()">Update</button>  
   </div>
   <script src="lib/angular/angular.js"></script>
   <script src="js/app.js"></script>
