--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app >
+<html lang="en" ng-app="dabbble" >
 <head>
   <meta charset="utf-8">
   <title>Dabbble</title>
