--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
         </ul>
       </div>
     </div>
-    <div ng-view></div>
-    <h1>Hello {{ name }}</h1>
-    <input type="text" placeholder="enter name" ng-model="name"> 
-    <button class="btn" ng-click="updateName()">Update</button>  
+    <div ng-controller="ShotsListCtrl">
+        <ul class="thumbnails">
+            <li class="thumbnails" ng-repeat="shot in list.shots">
+                {{ shot.title }}
+                <img src={{shot.image_url}}>
+            </li>
+        </ul>  
+    </div> 
   </div>
   <script src="lib/angular/angular.js"></script>
   <script src="js/app.js"></script>
