--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Dabbble</title>
-  <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>
-  <link rel="stylesheet" href="css/app.css"/>
+  <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="css/app.css">
 </head>
 <body ng-controller="appCtrl">
   <div class="container">
@@ -17,9 +17,17 @@
     </div>
     <div ng-controller="ShotsListCtrl">
         <ul class="thumbnails">
-            <li class="thumbnails" ng-repeat="shot in list.shots">
-                {{ shot.title }}
-                <img src={{shot.image_url}}>
+            <li class="shot span3 thumbnails" ng-repeat="shot in list.shots">
+                <div class="thumbnail">
+                    <a href="#/shots/{{shot.id}}">
+                        <img ng-src="{{shot.image_url}}">
+                    </a>
+                    <strong class="title">{{shot.title}}</strong>
+                    
+                    <a class="player" href="#/players/{{shot.player.username}}">
+                        {{shot.player.name}}
+                    </a>
+                </div>
             </li>
         </ul>  
     </div> 
